# vegapunk-slack-ingester

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
docs/superpowers/plans/: 2026-04-11-slack-ingester-implementation.md
docs/superpowers/specs/: 2026-04-10-slack-ingester-design.md
proto/: graphrag.proto
specs/: coding-standards.md  requirements.md  security-rules.md
src/: alert.rs  buffer.rs  cache.rs  catchup.rs  config.rs  converter.rs  cursor.rs  extractor.rs  import.rs  lib.rs  main.rs
src/slack/: client.rs  mod.rs  socket.rs  types.rs
src/vegapunk/: client.rs  mod.rs
tests/: buffer_test.rs  config_test.rs  converter_test.rs  cursor_test.rs
