[package]
name = "vegapunk-slack-ingester"
version = "0.1.0"
edition = "2021"

[lib]
name = "vegapunk_slack_ingester"
path = "src/lib.rs"

[[bin]]
name = "vegapunk-slack-ingester"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
